[gd_scene load_steps=6 format=3 uid="uid://mad3bmfrd3a6"]

[ext_resource type="Script" path="res://scripts/Item/BaseItem.gd" id="1_ab32g"]

[sub_resource type="SphereShape3D" id="SphereShape3D_vthi6"]
radius = 0.7

[sub_resource type="Animation" id="Animation_adrt3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rotate_Item:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Rotate_Item:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.2, 0)]
}

[sub_resource type="Animation" id="Animation_j0cip"]
resource_name = "idel_item_animation"
length = 8.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rotate_Item:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 3.14159, 0), Vector3(0, 6.28319, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Rotate_Item:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.5, 0), Vector3(0, 0.7, 0), Vector3(0, 0.5, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v0hfc"]
_data = {
"RESET": SubResource("Animation_adrt3"),
"idel_item_animation": SubResource("Animation_j0cip")
}

[node name="BaseItem" type="Node3D"]
transform = Transform3D(0.867086, 0, -0.498158, 0, 1, 0, 0.498158, 0, 0.867086, 0, 0.5, 0)
script = ExtResource("1_ab32g")
item_rotate = "res://model/items/Item.blend"

[node name="Rotate_Item" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_vthi6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v0hfc")
}

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
